--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,10 @@
 *.slo
 *.lo
 *.o
-*.obj
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
 
 # Compiled Static libraries
 *.lai
@@ -19,3 +17,7 @@
 *.exe
 *.out
 *.app
+*.vsp
+OpenGLTutorialProject/ipch
+OpenGLTutorialProject/Debug/
+ipch/
